--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="${htmlClass!''}">
 <head>
     <meta charset="UTF-8">
-    <title>胡同群</title>
+    <title>胡同随机小伙伴啦</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=720,user-scalable=0,target-densitydpi=device-dpi">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
